RESOLVED FIXED215787
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebKit: WebKit::PDFPlugin::createScrollbar
https://bugs.webkit.org/show_bug.cgi?id=215787
Summary CrashTracer: com.apple.WebKit.WebContent at com.apple.WebKit: WebKit::PDFPlug...
Brady Eidson
Reported 2020-08-24 17:45:25 PDT
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebKit: WebKit::PDFPlugin::createScrollbar We tried to cover this over in https://trac.webkit.org/changeset/264945/webkit but the fix was subtly incomplete. Try again. <rdar://problem/67473335>
Attachments
Patch (4.20 KB, patch)
2020-08-24 17:57 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2020-08-24 17:57:55 PDT
EWS
Comment 2 2020-08-24 19:44:44 PDT
Committed r266099: <https://trac.webkit.org/changeset/266099> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407151 [details].
Note You need to log in before you can comment on or make changes to this bug.